# Back-End/controllers/fluxos.controller.js
@@ -1,19 +1,119 @@
+const { where } = require("sequelize");
 const models = require("../models");
+const Validator = require("fastest-validator");
 
-function index(req, res) {}
+function index(req, res) {
+  // Extrai e converte o limit, se existir
+  const limit = req.query.limit ? parseInt(req.query.limit) : null;
+  delete req.query.limit;
 
-function show(req, res) {}
 
-function save(req, res) {}
+  const whereEquipamento = {};
+  if(req.query.CodEquipamento !== undefined) whereEquipamento.codigo = req.query.CodEquipamento;
+  if(req.query.faixaEquipamento !== undefined) whereEquipamento.faixa = req.query.faixaEquipamento;
 
-function update(req, res) {}
+  const whereFluxos = {};
+  if(req.query.placa !== undefined) whereFluxos.placa = req.query.placa;
 
-function destroy(req, res) {}
+
+
+  models.Fluxo.findAll({
+    where: { ...whereFluxos },
+    include: [
+      {
+        model: models.Equipamento,
+        where: whereEquipamento,
+      },
+    ],
+  })
+    .then((result) => {
+      if (limit) {
+        result = result.slice(0, limit);
+      }
+      if (req.query.dataInicio) {
+        result = result.filter(
+          (f) => new Date(f.data) >= new Date(req.query.dataInicio)
+        );
+      }
+      if (req.query.dataFim) {
+        result = result.filter(
+          (f) => new Date(f.data) <= new Date(req.query.dataFim)
+        );
+      }
+      if (req.query.horaInicio) {
+        result = result.filter(
+          (f) =>
+            new Date(`1970-01-01T${f.hora}`) >=
+            new Date(`1970-01-01T${req.query.horaInicio}`)
+        );
+      }
+      if (req.query.horaFim) {
+        result = result.filter(
+          (f) =>
+            new Date(`1970-01-01T${f.hora}`) <=
+            new Date(`1970-01-01T${req.query.horaFim}`)
+        );
+      }
+
+      res.status(200).json(result);
+    })
+    .catch((err) => {
+      res.status(500).json({
+        message: "Não foi possível obter os fluxos solicitados",
+        error: err,
+      });
+    });
+}
+
+function show(req, res) {
+  const id = req.params.id;
+  models.Fluxo.findByPk(id)
+    .then((result) => {
+      if (result) {
+        res.status(200).json(result);
+      } else {
+        res.status(404).json({
+          message: "Fluxo não encontrado",
+        });
+      }
+    })
+    .catch((err) => {
+      res.status(500).json({
+        message: "Não foi possível obter o fluxo solicitado",
+        error: err,
+      });
+    });
+}
+
+// Fluxo virão de um equipamento externo
+// function save(req, res) { }
+// async function update(req, res) { }
+
+function destroy(req, res) {
+  const id = req.params.id;
+
+  models.Fluxo.destroy({
+    where: {
+      id: id,
+    },
+  })
+    .then((result) => {
+      res.status(200).json({
+        message: "Fluxo removido com sucesso",
+      });
+    })
+    .catch((err) => {
+      res.status(500).json({
+        message: "Não foi possível remover o Fluxo",
+        error: err,
+      });
+    });
+}
 
 module.exports = {
   index: index,
   show: show,
-  save: save,
-  update: update,
+  // save: save,
+  // update: update,
   destroy: destroy,
 };
