# Back-End/docs/swagger.json
@@ -1005,7 +1005,7 @@
             "description": "Data de fim (YYYY-MM-DD)"
           },
           {
-            "name": "HoraInicio",
+            "name": "horaInicio",
             "in": "query",
             "schema": {
               "type": "string",
@@ -1014,7 +1014,7 @@
             "description": "Hora de início (HH:MM)"
           },
           {
-            "name": "HoraFim",
+            "name": "horaFim",
             "in": "query",
             "schema": {
               "type": "string",
@@ -1049,33 +1049,6 @@
             }
           }
         }
-      },
-      "post": {
-        "tags": ["Fluxos"],
-        "summary": "Registrar novo fluxo",
-        "security": [{ "bearerAuth": [] }],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Fluxo"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Fluxo registrado com sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Fluxo"
-                }
-              }
-            }
-          }
-        }
       }
     },
     "/fluxos/{id}": {
@@ -1090,41 +1063,6 @@
         "responses": {
           "200": {
             "description": "Fluxo encontrado",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Fluxo"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Fluxo não encontrado"
-          }
-        }
-      },
-      "put": {
-        "tags": ["Fluxos"],
-        "summary": "Atualizar fluxo",
-        "security": [{ "bearerAuth": [] }],
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/idPath"
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Fluxo"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Fluxo atualizado",
             "content": {
               "application/json": {
                 "schema": {
